# dotinstall

./: .gitignore  README.md  pyproject.toml
src/dotinstall/: SubprocRunner.py  __main__.py
src/dotinstall.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
